remove one border.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -57,9 +57,9 @@
         font-family: 'Anek Latin', sans-serif;
     }
 
-    section {
+    /* section {
         border: 1px solid yellow;
-    }
+    } */
 
     /* navbar */
     .navbar {
