--- a/CSS/main.css
+++ b/CSS/main.css
@@ -57,9 +57,9 @@
         font-family: 'Anek Latin', sans-serif;
     }
 
-    section {
-        border: 1px solid yellow;
-    }
+    /* section {
+        border: 1px soli`d yellow;
+    } */
 
     /* navbar */
     .navbar {
@@ -455,6 +455,11 @@ h3 {
         text-align: justify;
         height: 12rem;
         overflow-y: auto;
+        background: #30336b;
+        color: #fff;
+        outline: none !important;
+        border: none !important;
+        width: 100%;
     }
 
     /* .project-btns a {
